# codex_poe2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: channels.json  rules.json
docs/: STATUS.md
src/poe2_monitor/: __init__.py  analysis.py  cli.py  config_loader.py  filters.py  models.py  pipeline.py  settings.py  storage.py  telegram_bot.py
src/poe2_monitor/sources/: __init__.py  base.py  reddit.py  youtube.py
src/poe2_opportunity_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
